--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <title>Web App Flask</title>
 {% if user %}
-  <h1>Seja bem vindo, user {{ user }}!</h1>
+  <h1>Seja bem vindo, user_{{ user }}!</h1>
   <h3>Pegue o seu cupom <a href="/qtde/{{ user }}"><b>AQUI</b></a> </h3>
 {% else %}
   <h1>Seja bem vindo</h1>
