--- a/templates/cupom.html
+++ b/templates/cupom.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <title>Web App Flask</title>
 {% if user %}
-  <h1>Salve o número do seu cupom, user {{ user }}!</h1>
+  <h1>Salve o número do seu cupom, user_{{ user }}!</h1>
   <h3>Cupom:  <b>{{ cupom}}</b> </h3>
   <span><a href="/">Voltar</a></span>
 {% else %}
