--- a/templates/cupom.html
+++ b/templates/cupom.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <title>Web App Flask</title>
 {% if user %}
-  <h1>Salve o número do seu cupom, user_{{ user }}!</h1>
-  <h3>Cupom:  <b>{{ cupom}}</b> </h3>
-  <span><a href="/">Voltar</a></span>
+<h1><strong>Exemplo CI CD - Python Flask + Github + Fly.io</strong></h1>
+  <h2>Salve o número do seu cupom, user_{{ user }}!</h2>
+  <h4>Cupom:  <b>{{ cupom}}</b> </h4>
+  <span><h5><a href="/">Voltar</a></h5></span>
 {% else %}
-  <h1>Seja bem vindo</h1>
+  <h2>Seja bem vindo</21>
 {% endif %}
