--- a/templates/home.html
+++ b/templates/home.html
@@ -11,4 +11,4 @@
 
 
 <img src="{{url_for('static', filename='fly.png')}}" />
-<img src="{{url_for('static', filename='github.png')}}" />
+<img src="{{url_for('static', filename='github.png')}}" height="150px"/>
