--- a/templates/cupom.html
+++ b/templates/cupom.html
@@ -4,7 +4,7 @@
 <h1><strong>Exemplo CI CD - Python Flask + Github + Fly.io</strong></h1>
   <h2>Salve o número do seu cupom, user_{{ user }}!</h2>
   <h4>Cupom:  <b>{{ cupom}}</b> </h4>
-  <h5><a href="/">Voltar</a></h5>
+  <a href="/"><button>Voltar</button></a>
 {% else %}
   <h2>Seja bem vindo</21>
 {% endif %}
